# the_birthday_paradox_in_sports

./: BirthdayParadoxAnalyzer.py  README.md  SquadLists-English_tables.csv  cricinfo_debug_1365288.html  debug_1365288.html  loop_scraper.py  main.py  pyproject.toml
dataset/: people_updated.csv  scraper_checkpoint.txt  squad_list.ipynb
eda/: football_dataset_eda.ipynb
utils/: CricInfoProfileScraper.py  CricSheetJsonParser.py  DoclingTableExtractor.py
